# gsma-open-gw-apis

./: calendar.html  dependencies.sh  flake.nix
ccam-nef-bridge/: .dockerignore  Dockerfile  config.toml  main.py  pyproject.toml
ccam-nef-bridge/src/: async_mqtt.py  schemas.py  settings.py
demos/final-demo-backend/: pyproject.toml
demos/final-demo-backend/app/: session.py
demos/final-demo-backend/app/endpoints/: __init__.py  auth.py
demos/final-demo-backend/app/services/: reachability.py
gateway/: .dockerignore  Dockerfile  README.md  config.toml  pyproject.toml
gateway/SMSOTP/: main.py
gateway/SMSOTPAPP/: __init__.py  otp_sender.py  otp_validator.py  utils.py
gateway/app/: __init__.py  config.py  exception_handlers.py  exceptions.py  main.py  probes.py  redis.py  settings.py
gateway/app/drivers/: __init__.py  nef_auth.py
gateway/app/drivers/geofencing/: __init__.py  subscriptions.py
gateway/app/drivers/location/: __init__.py  emulator.py  mock.py  nef.py
gateway/app/drivers/otp/: __init__.py  memory.py  redis.py
gateway/app/drivers/qodProvisioning/: __init__.py  nef.py  provisioning.py
gateway/app/drivers/qos_profiles/: __init__.py  nef.py
gateway/app/drivers/quality_on_demand/: __init__.py
gateway/app/drivers/reachability_status/: __init__.py  nef.py
gateway/app/drivers/roaming_status/: __init__.py
gateway/app/drivers/sms/: __init__.py  mock.py  smsc.py
gateway/app/endpoints/: __init__.py
gateway/app/endpoints/callbacks/: __init__.py  qodProvisioning.py
gateway/app/endpoints/geofencing_subscriptions/: __init__.py  create_subscription.py  delete_subscription.py  get_subscriptions.py  get_subscriptions_by_id.py
gateway/app/endpoints/geofencing_webhook/: __init__.py
gateway/app/endpoints/location/: __init__.py  retrieve.py  verify.py
gateway/app/endpoints/qodProvisioning/: __init__.py  create_deviceQos.py  create_device_qos.py  delete_deviceQod.py  delete_device_qod.py  get_deviceQod_by_id.py  get_device_qod_by_id.py  retrieveDeviceQos.py  retrieve_device_qos.py
gateway/app/endpoints/qos_profiles/: __init__.py  fetch.py
gateway/app/endpoints/quality_on_demand/: __init__.py  create_qod_session.py  delete_device_session.py  extend_session.py  get_session_by_id.py  retrieve_device_session.py
gateway/app/endpoints/reachability_status/: __init__.py
gateway/app/endpoints/roaming_status/: __init__.py
gateway/app/endpoints/smsotp/: __init__.py  send.py  validate.py
gateway/app/geofencing_subscriptions/: __init__.py  delete_subscriptions_by_id.py  get_subscriptions.py  get_subscriptions_by_id.py  post_subscriptions.py  schemas.py  subscriptions.py
gateway/app/interfaces/: geofencing_subscriptions.py  location.py  otp.py  qodProvisioning.py  qos_profiles.py  quality_on_demand.py  reachability_status.py  roaming_status.py  sms.py
gateway/app/schemas/: __init__.py  afSessionWithQos.py  common.py  commonData.py  device.py  geofencing.py  location.py  qodProvisioning.py  qos_profiles.py  quality_on_demand.py  reachability_status.py  roaming_status.py  smsotp.py  subscriptions.py  utils.py
gateway/app/utils/: mcc_to_country_code.py  nef_driver_base.py  subscription_driver_base.py  subscription_driver_redis.py
gateway/tests/: test_main.py  test_smsotp.py
ims/: .env  (+4 more)
webhook-service-demo/: app.py  pyproject.toml
(+264 files in other folders)
