[project]
name = "gsma-open-gateway"
version = "0.1.0"
description = "IT's GSMA Open Gateway implementation"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
