[project]
name = "gsma-open-gateway"
version = "0.1.0"
description = "IT's GSMA Open Gateway implementation"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "redis[hiredis]>=5.2.1",
]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

