[project]
name = "webhook-to-websocket"
version = "0.1.0"
description = "Sends webhook callbacks into a webhook"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "Flask-SocketIO>=5.5.1",
    "types-flask-socketio>=5.5.0.20250321",
]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

